# fastapi-sqlalchemy2-sqlite

./: .env  .gitignore  Dockerfile  Makefile  README.md  alembic.ini  main.py  pyproject.toml  run.py
app/: constants.py  database.py  main.py  routes.py  settings.py  utils.py
app/api/: api.py  dependencies.py  healthcheck.py  main.py  resources.py
app/config/: local.env  test.env
app/models/: base.py  schemas.py  urls.py
app/routers/: main.py  second.py
app/tests/: conftest.py  test_health.py  test_main.py
migrations/: env.py
migrations/versions/: 8a13a257f323_initial.py
scripts/: build  env  format  lint  run  start
