[tool.poetry]
name = "fastapi-test001"
version = "0.1.0"
description = ""
authors = ["Sergey Silaev <hello@8am.dev>"]
packages = [{include = "app"}]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.97.0"
uvicorn = "^0.22.0"
httpx = "^0.24.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
