[tool.poetry]
name = "click.local"
version = "0.5.0"
description = "Simple FastAPI backend for URL Shortener site based on sqlite+aiosqlite."
authors = ["Sergey Silaev <hello@8am.dev>"]
packages = [{include = "app"}]

[tool.poetry.dependencies]
python = "^3.11"
uvicorn = "^0.22.0"
httpx = "^0.24.1"
sqlalchemy = "^2.0.17"
alembic = "^1.11.1"
fastapi = {extras = ["all"], version = "^0.100.0"}
aiosqlite = "^0.19.0"

[tool.poetry.group.dev.dependencies]
ruff = "^0.0.275"
black = "^23.3.0"
mypy = "^1.4.0"
isort = "^5.12.0"
pytest = "^7.4.0"
coverage = "^7.2.7"
pytest-coverage = "^0.0"
pytest-asyncio = "^0.21.0"
pytest-mock = "^3.11.1"
pytest-env = "^0.8.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.mypy]
plugins = ["pydantic.mypy"]
warn_return_any = false

[[tool.mypy.overrides]]
module = [
  "app.*"
]

[tool.black]
line-length = 100

[tool.ruff]
line-length = 100
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "C",  # flake8-comprehensions
    "B",  # flake8-bugbear
]
ignore = [
    "E501",  # line too long, handled by black
    "B008",  # do not perform function calls in argument defaults
    "C901",  # too complex
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["app"]
env = ["ENV_FILE=test"]
xfails_strict = true
addopts = "-svv --cov=app -p no:warnings"
